--- a/style.css
+++ b/style.css
@@ -10,13 +10,13 @@ html {
 }
 
 body {
-  font-family: sans-serif;
-  font-weight: 500;
+  font-family: "Rubik", sans-serif;
+  font-weight: 400;
   line-height: 1;
   color: #343a40;
 }
 .section-hero {
-  background-color: #fdf2e9;
+  background-color: #f8d8bd;
   padding: 9.6rem 0;
 }
 .hero {
@@ -28,7 +28,7 @@ body {
   align-items: center;
 }
 .heading-primary {
-  font-size: 5.2rem;
+  font-size: 4.5rem;
   font-weight: 600;
   line-height: 1.05;
   color: #333;
@@ -36,7 +36,7 @@ body {
   margin-bottom: 3.2rem;
 }
 .hero-description {
-  font-size: 2rem;
+  font-size: 1.8rem;
   line-height: 1.5;
   margin-bottom: 4.8rem;
 }
@@ -49,6 +49,7 @@ body {
   font-size: 2rem;
   display: inline-block;
   padding: 1.6rem 3.2rem;
+  font-weight: 600;
   border-radius: 12px;
   text-decoration: none;
   transition: background-color 0.4s;
@@ -76,4 +77,41 @@ body {
 .btn--full:active {
   background-color: #cf711f;
   color: #fff;
+}
+.btn--outline:hover,
+.btn--outline:active {
+  background-color: #fdf2e9;
+  border: 1px solid white;
+  /*box-shadow: inset 0 0 3px white;*/
+}
+
+.delivered-meals {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  margin-top: 8rem;
+}
+
+.delivered-img {
+  display: flex;
+}
+
+.delivered-img img {
+  max-height: 4.8rem;
+  max-width: 4.8rem;
+  border-radius: 50%;
+  margin-right: -1.6rem;
+  border: 3px solid #f8d8bd;
+}
+
+.delivered-img img:last-child {
+  margin: 0;
+}
+.deliver-text {
+  font-size: 1.3rem;
+  font-weight: 600;
+}
+.deliver-text span {
+  color: #cf711f;
+  font-weight: 600;
 }
