--- a/style.css
+++ b/style.css
@@ -171,3 +171,50 @@ body {
   color: #cf711f;
   font-weight: 600;
 }
+
+/***********************/
+/* THE HOW IT WORKS SECTION */
+/***********************/
+.section-how {
+  padding: 9.6px 0;
+  background-color: orangered;
+}
+
+.container {
+  max-width: 120rem;
+  margin: 0 auto;
+}
+
+.section-how div {
+  padding: 10rem;
+  font-size: 50px;
+  font-weight: bolder;
+}
+
+.grid {
+  display: grid;
+  gap: 9.6rem;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.grid-2-cols {
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.grid-3-cols {
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.section-how div:nth-child(1) {
+  background-color: aqua;
+}
+
+.section-how div:nth-child(2) {
+  background-color: blue;
+}
+.section-how div:nth-child(3) {
+  background-color: violet;
+}
+.section-how div:nth-child(4) {
+  background-color: yellow;
+}
