--- a/style.css
+++ b/style.css
@@ -180,10 +180,13 @@ body {
   padding: 9.6rem 0;
   background-color: orangered;
 }
-.section-how div {
-  padding: 100px;
-  font-size: 50px;
+
+.container {
+  max-width: 120rem;
+  padding: 0 3.6rem;
+  margin: 0 auto;
 }
+
 .grid {
   display: grid;
   gap: 9.6rem;
@@ -197,15 +200,8 @@ body {
   grid-template-columns: repeat(4, 1fr);
 }
 
-.section-how div:nth-child(1) {
-  background-color: aqua;
-}
-.section-how div:nth-child(2) {
-  background-color: blue;
-}
-.section-how div:nth-child(3) {
-  background-color: violet;
-}
-.section-how div:nth-child(4) {
-  background-color: yellow;
+.section-how div {
+  padding: 70px;
+  font-size: 50px;
+  background-color: #e67e22 i;
 }
