--- a/style.css
+++ b/style.css
@@ -221,7 +221,32 @@ body {
   color: #cf711f;
   font-weight: 600;
 }
+/***********************/
+/* FEATURED IN */
+/***********************/
 
+.section-featured {
+  padding: 4.8rem 0 3.2rem 0;
+}
+
+.heading-featured-in {
+  font-size: 1.4rem;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  text-align: center;
+  margin-bottom: 3.2rem;
+  color: #868e96;
+}
+.logo {
+  display: flex;
+  justify-content: space-around;
+}
+.logo img {
+  height: 4.5rem;
+  filter: brightness(0);
+  opacity: 50%;
+}
 /***********************/
 /* THE HOW IT WORKS SECTION */
 /***********************/
