--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-  font-family: "Rubik", sans-serif;
+  font-family: sans-serif;
   font-weight: 400;
   line-height: 1;
   color: #343a40;
@@ -38,8 +38,8 @@ body {
 .grid--center-v {
   align-items: center;
 }
-.grid--4-cols {
-  grid-template-columns: repeat(4, 1fr);
+.grid--3-cols {
+  grid-template-columns: repeat(3, 1fr);
 }
 .heading-primary,
 .heading-primary,
@@ -313,6 +313,48 @@ body {
   padding: 9.6rem 0;
 }
 
+.meals {
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
+  border-radius: 12px;
+  overflow: hidden;
+  transition: all 0.4s;
+}
+
+.meals:hover {
+  transform: translateY(-1.2rem);
+  box-shadow: 0 3.2rem 6.4rem rgba(0, 0, 0, 0.06);
+}
+
+.meal-content {
+  padding: 3.2rem 4.8rem 4.8rem 4.8rem;
+}
+
+.tag {
+  display: inline-block;
+  padding: 0.4rem 0.8rem;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  font-weight: 600;
+  color: #333;
+  border-radius: 100px;
+}
+
+.tag--vegetarian {
+  background-color: #51cf66;
+}
+.tag--vegan {
+  background-color: #74b816;
+}
+.tag--paleo {
+  background-color: #fab005;
+}
+
+.meal-tag {
+  margin-bottom: 1.2rem;
+  display: flex;
+  gap: 0.5rem;
+}
+
 .meal-title {
   font-size: 2.4rem;
   color: #333;
@@ -329,7 +371,69 @@ body {
 
 .meal-attr {
   font-size: 1.8rem;
+  display: flex;
+  align-items: center;
+  gap: 1.8rem;
+}
+.meals-icon {
+  height: 2.4rem;
+  width: 2.4rem;
+  color: #e67e22;
 }
 .meal-img {
   width: 100%;
 }
+
+strong {
+  font-weight: 600;
+}
+
+.list {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+}
+
+.list-icon {
+  height: 3rem;
+  width: 3rem;
+  color: #e67e22;
+}
+
+.list-item {
+  font-size: 1.8rem;
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+}
+
+.all-recipe {
+  text-align: center;
+  font-size: 1.8rem;
+}
+
+.link:link,
+.link:visited {
+  display: inline-block;
+  color: #e67e22;
+  text-decoration: none;
+  border-bottom: 1px solid currentColor;
+  padding-bottom: 2px;
+  transition: all 0.3s;
+}
+.link:hover,
+.link:active {
+  color: #cf711f;
+  border-bottom: 1px solid transparent;
+}
+
+/*HELPER/SETTINGS CLASS*/
+.margin-bottom-md {
+  margin-bottom: 4.8rem !important;
+}
+
+.center-text {
+  text-align: center;
+}
+/**********************/
