--- a/style.css
+++ b/style.css
@@ -30,6 +30,8 @@ body {
   display: grid;
   column-gap: 9.6rem;
   gap: 9.6rem;
+
+  margin-bottom: 9.6rem;
 }
 
 .grid-2-cols {
@@ -243,7 +245,7 @@ body {
   justify-content: space-around;
 }
 .logo img {
-  height: 4.5rem;
+  height: 3rem;
   filter: brightness(0);
   opacity: 50%;
 }
@@ -503,11 +505,38 @@ strong {
 }
 
 .pricing-plan {
-  background-color: #fdf2e9;
   border-radius: 11px;
-  padding: 4.8rem;
+
+  width: 75%;
 }
 
+.pricing-plan--starter {
+  justify-self: end;
+
+  border: 0.3rem solid #fdf2e9;
+  padding: 4.6rem;
+}
+
+.pricing-plan--complete {
+  background-color: #fdf2e9;
+  padding: 4.8rem;
+  position: relative;
+  overflow: hidden;
+}
+.pricing-plan--complete::after {
+  content: "best value";
+  position: absolute;
+  top: 4%;
+  right: -12%;
+
+  font-size: 1.4rem;
+  font-weight: 700;
+  padding: 1rem 4rem;
+  background-color: #ffd43b;
+  color: #333;
+  text-transform: uppercase;
+  transform: rotate(45deg);
+}
 .plan-name {
   font-size: 2rem;
   font-weight: 600;
@@ -549,4 +578,44 @@ p .dollar {
 .plan-sign-up {
   text-align: center;
   margin-top: 4.8rem;
+}
+
+.grid:last-child {
+  margin-bottom: 0;
+}
+
+.grid--4-cols {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.plan-detail {
+  font-size: 1.6rem;
+  font-weight: 500;
+  line-height: 1.6;
+  color: #495057;
+  text-align: center;
+}
+
+.feature-text {
+  font-size: 1.8rem;
+  line-height: 1.8;
+  letter-spacing: 0.1rem;
+  width: 24.8rem;
+  color: #495057;
+}
+
+.feature-title {
+  font-size: 2.4rem;
+  font-weight: 700;
+  color: #333;
+  margin-bottom: 1.6rem;
+}
+.feature-icon {
+  color: #cf711f;
+  background-color: #fdf2e9;
+  font-size: 3.5rem;
+  padding: 1.5rem 1.5rem;
+  border-radius: 50%;
+  margin-bottom: 2.8rem;
 }
