--- a/style.css
+++ b/style.css
@@ -601,7 +601,7 @@ p .dollar {
   font-size: 1.8rem;
   line-height: 1.8;
   letter-spacing: 0.1rem;
-  width: 24.8rem;
+  width: 22rem;
   color: #495057;
 }
 
@@ -618,4 +618,50 @@ p .dollar {
   padding: 1.5rem 1.5rem;
   border-radius: 50%;
   margin-bottom: 2.8rem;
+}
+
+/***********************/
+/* CTA SECTION */
+/***********************/
+.section-cta {
+  padding: 9.6rem 0;
+}
+
+.cta {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  /*background-color: #cf711f;*/
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.4);
+  border-radius: 11px;
+
+  background-image: linear-gradient(90deg, #d98d4c, #ba661c);
+  overflow: hidden;
+  /*temporary height:*/
+  height: 50rem;
+}
+
+.cta-text-box {
+  padding: 3rem 6rem 6rem 6rem;
+  color: #291706;
+}
+
+.cta-text-box .heading-secondary {
+  color: #291706;
+  margin-bottom: 3rem;
+}
+
+.cta-text {
+  font-size: 1.8rem;
+  line-height: 1.8;
+}
+
+.cta-image-box {
+  background-image: linear-gradient(
+      90deg,
+      hsla(28, 65%, 57%, 0.1),
+      hsla(28, 74%, 42%, 0.1)
+    ),
+    url(https://th.bing.com/th?id=OIP.O1vFO7GBjdVZKGNcwmre0QHaE8&w=306&h=204&c=8&rs=1&qlt=90&o=6&dpr=1.3&pid=3.1&rm=2);
+  background-size: cover;
+  background-position: center;
 }
