--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ body {
   background-color: #fff;
   color: #555;
 }
+.btn,
 .btn:link,
 .btn:visited {
   font-size: 2rem;
@@ -107,6 +108,11 @@ body {
   padding: 1.6rem 3.2rem;
   border-radius: 12px;
   text-decoration: none;
+
+  /* only applied to the CTa-action btn */
+  cursor: pointer;
+  border: none;
+  font-family: inherit;
 }
 .btn--full:hover,
 .btn--full:active {
@@ -624,7 +630,10 @@ p .dollar {
 /* CTA SECTION */
 /***********************/
 .section-cta {
-  padding: 9.6rem 0;
+  /*orders for inputing a padding
+  1: top/right/bottom/left => 2rem 34rem 4rem 5rem
+  2: top/horizontal/left => 4rem 0 34rem.*/
+  padding: 4.6rem 0 12.8rem;
 }
 
 .cta {
@@ -637,22 +646,29 @@ p .dollar {
   background-image: linear-gradient(90deg, #d98d4c, #ba661c);
   overflow: hidden;
   /*temporary height:*/
-  height: 50rem;
 }
 
 .cta-text-box {
   padding: 3rem 6rem 6rem 6rem;
-  color: #291706;
+  color: #45260a;
 }
 
 .cta-text-box .heading-secondary {
-  color: #291706;
+  color: #45260a;
   margin-bottom: 3rem;
 }
 
 .cta-text {
   font-size: 1.8rem;
   line-height: 1.8;
+  margin-bottom: 4.2rem;
+}
+
+.cta-form {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 3.2rem;
+  row-gap: 2.4rem;
 }
 
 .cta-image-box {
@@ -664,4 +680,135 @@ p .dollar {
     url(https://th.bing.com/th?id=OIP.O1vFO7GBjdVZKGNcwmre0QHaE8&w=306&h=204&c=8&rs=1&qlt=90&o=6&dpr=1.3&pid=3.1&rm=2);
   background-size: cover;
   background-position: center;
+}
+
+.cta-form label {
+  display: block;
+  font-size: 1.6rem;
+  font-weight: 600;
+  margin-bottom: 1.2rem;
+  color: #45260a;
+}
+
+.cta-form input,
+.cta-form select {
+  width: 100%;
+  padding: 1.2rem;
+  font-size: 1.8rem;
+  font-family: inherit;
+  color: inherit;
+  border: none;
+  background-color: #fdf2e9;
+  border-radius: 9px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+.cta-form input::placeholder {
+  color: #aaa;
+}
+
+.btn--form {
+  background-color: #45260a;
+  color: #fdf2e9;
+  align-self: end;
+  padding: 1.1rem;
+}
+
+.btn--form:hover {
+  background-color: #fdf2e9;
+  color: #555;
+}
+
+*:focus {
+  outline: none;
+  /*
+  outline: 4px dotted #cf711f;
+  outline-offset: 8px;
+  */
+  box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5);
+}
+
+.cta *:focus {
+  outline: none;
+  /*
+  outline: 4px dotted #cf711f;
+  outline-offset: 8px;
+  */
+  box-shadow: 0 0 0 0.8rem rgba(253, 242, 233, 0.5);
+}
+/*************************/
+/* THE FOOTER SECTION*/
+/************************/
+
+.grid--5-cols {
+  display: grid;
+  grid-template-columns: 1.6fr 1.6fr 1fr 1fr 1fr;
+}
+
+.footer {
+  padding: 12.8rem 0;
+  border-top: 1px #eee solid;
+}
+.logo-col {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer-logo {
+  display: block;
+  margin-bottom: 3.2rem;
+}
+
+.contact-referral,
+.footer-heading {
+  font-size: 1.8rem;
+  font-weight: 500;
+  margin-bottom: 4rem;
+}
+
+.social-icon {
+  height: 2.4rem;
+  width: 2.4rem;
+}
+
+.copyright {
+  font-size: 1.6rem;
+  color: #767676;
+  line-height: 1.6;
+  margin-top: auto;
+}
+
+.contact-address {
+  font-style: normal;
+  font-size: 1.6rem;
+  line-height: 1.6;
+}
+
+.address {
+  margin-bottom: 1.6rem;
+}
+
+.social-link {
+  list-style: none;
+  display: flex;
+  gap: 2.4rem;
+}
+
+.footer-nav {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 2.4rem;
+}
+
+.footer-link:link,
+.footer-link:visited {
+  text-decoration: none;
+  font-size: 1.6rem;
+  color: #767676;
+  transition: all 0.3s;
+}
+.footer-link:hover,
+.footer-link:active {
+  color: #333;
 }
