--- a/resp.css
+++ b/resp.css
@@ -22,4 +22,86 @@ BELOW 1300px (smaller desktop)
 BELOW 1200px (land scape tablets)
 ********************************/
 @media (max-width: 75em) {
+  html {
+    font-size: 56.25%;
+  }
+
+  .header {
+    padding: 0 5.2rem;
+  }
+
+  .grid {
+    column-gap: 4.8rem;
+    row-gap: 6.4rem;
+  }
+
+  .heading-secondary {
+    font-size: 3.6rem;
+  }
+
+  .heading-tertiary {
+    font-size: 2.4rem;
+  }
+  .hero {
+    gap: 4.8rem;
+  }
+  .main-nav-list {
+    gap: 3.2rem;
+  }
+  .testimonials-container {
+    padding: 8rem 3rem;
+  }
+}
+
+/************************************
+BELOW 940(mini tablet)
+************************************/
+@media (max-width: 59em) {
+  /******************
+    8px/16px = 0.5 = 50%
+    *******************/
+  html {
+    font-size: 50%;
+  }
+  .hero {
+    grid-template-columns: 1fr;
+    padding: 0 8rem;
+    gap: 4.8rem;
+  }
+  .hero-text-box,
+  .hero-img-box {
+    text-align: center;
+  }
+  .hero-img {
+    width: 50%;
+  }
+  .delivered-meals {
+    justify-content: center;
+    margin-top: 3.2rem;
+  }
+  .logo img {
+    height: 2.2rem;
+  }
+  .step-number {
+    font-size: 7.2rem;
+  }
+  .meal-content {
+    padding: 2rem 2.6rem 2.6rem 2.6rem;
+  }
+  .section-testimonial {
+    grid-template-columns: 1fr;
+  }
+  .gallary {
+    grid-template-columns: repeat(6, 1fr);
+  }
+
+  .cta {
+    grid-template-columns: 3fr 2fr;
+  }
+  .cta-form {
+    grid-template-columns: 1fr;
+  }
+  .btn--form {
+    margin-top: 1.3rem;
+  }
 }
