--- a/resp.css
+++ b/resp.css
@@ -104,4 +104,65 @@ BELOW 940(mini tablet)
   .btn--form {
     margin-top: 1.3rem;
   }
+  /************************
+  MOBILE NAVIGATION
+  ************************/
+  .main-nav {
+    background-color: rgba(255, 255, 255, 0.97);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    transition: all 0.4s ease-in;
+    transform: translateX(100%);
+
+    /*************************
+    display: none does not allow any 
+    transitions so we will have to use 
+    opacity**********************/
+    opacity: 0;
+
+    /******************************
+    make it unaccessible on the mouse ad keyboard
+    *******************************/
+    pointer-events: none;
+
+    /************************************
+    hide it from screen readers,
+    ******************************/
+    visibility: hidden;
+  }
+
+  .nav-open .icon-mobile-nav[name="close-outline"] {
+    display: block;
+  }
+
+  .nav-open .icon-mobile-nav[name="reorder-four-outline"] {
+    display: none;
+  }
+
+  .nav-open .main-nav {
+    opacity: 1;
+    pointer-events: auto;
+    visibility: visible;
+    transform: translateX(0);
+  }
+
+  .main-nav-list {
+    flex-direction: column;
+  }
+  .main-nav-link:link,
+  .main-nav-link:visited {
+    font-size: 3rem;
+  }
+  .btn-mobile-nav {
+    display: block;
+    gap: 4.8rem;
+  }
 }
