--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ tint #fdf2e9
 }
 html {
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 
 body {
@@ -15,6 +16,7 @@ body {
   font-weight: 400;
   line-height: 1;
   color: #343a40;
+  overflow-x: hidden;
 }
 /***********************/
 /* GENERAL REUSEABLE COMPONENT */
@@ -135,6 +137,7 @@ body {
   background-color: #fdf2e9;
   height: 9.6rem;
   padding: 0 4.8rem;
+  position: relative;
 }
 .logo {
   height: 2.2rem;
@@ -148,6 +151,7 @@ body {
   align-items: center;
   gap: 4.8rem;
   font-size: 1.9rem;
+  font-weight: 600;
   color: #444;
 }
 .main-nav-link:link,
@@ -176,9 +180,26 @@ body {
 
 /* MOBILE NAV*/
 .btn-mobile-nav {
+  border: none;
+  background: none;
+  cursor: pointer;
+  display: none;
 }
 .icon-mobile-nav {
+  height: 4.4rem;
+  width: 4.4rem;
+  color: #333;
 }
+
+.icon-mobile-nav[name="close-outline"] {
+  display: none;
+}
+
+/********************
+  <ion-icon
+  class="icon-mobile-nav"
+name="reorder-four-outline"
+></ion-icon><ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
 
 /***********************/
 /* HERO SECTION */
