Done with the media query experiment on the omnifood website will actaully look on a mini tablet

--- a/resp.css
+++ b/resp.css
@@ -166,3 +166,42 @@ BELOW 940(mini tablet)
     gap: 4.8rem;
   }
 }
+
+@media (max-width: 44em) {
+  .grid--3-cols,
+  .grid--4-cols {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .diet {
+    grid-column: 1 / -1;
+    justify-self: center;
+  }
+
+  .heading-secondary {
+    margin-bottom: 5rem;
+  }
+  .pricing-plan {
+    width: 98%;
+  }
+  .pricing-plan--complete::after {
+    transform: rotate(42deg);
+  }
+
+  .grid--5-cols {
+    grid-template-columns: repeat(6, 1fr);
+  }
+  .nav-col {
+    grid-row: 1;
+    grid-column: span 2;
+    margin-bottom: 3.2rem;
+  }
+  .logo-col,
+  .address-col {
+    grid-column: span 3;
+  }
+  .btn--full:link,
+  .btn--full:visited {
+    font-size: 1.5rem;
+    padding: 1.2rem 2.4rem;
+  }
+}
