--- a/resp.css
+++ b/resp.css
@@ -164,6 +164,7 @@ BELOW 940(mini tablet)
   .btn-mobile-nav {
     display: block;
     gap: 4.8rem;
+    z-index: 999;
   }
 }
 
@@ -201,8 +202,8 @@ BELOW 940(mini tablet)
   }
   .btn--full:link,
   .btn--full:visited {
-    font-size: 1.5rem;
-    padding: 1.2rem 2.4rem;
+    font-size: 1.8rem;
+    padding: 1.4rem 2.8rem;
   }
 }
 
@@ -271,9 +272,29 @@ BELOW 940(mini tablet)
     padding: 1.2rem 3.2rem;
   }
 }
-
+@media (max-width: 28em) {
+  .btn,
+  .btn:link,
+  .btn:visited {
+    padding: 2rem 1rem;
+  }
+}
+@media (max-width: 26em) {
+  .btn,
+  .btn:link,
+  .btn:visited {
+    font-size: 1.9rem;
+    padding: 1.4rem 1.3rem;
+  }
+}
 @media (max-width: 25em) {
   .cta-text-box {
     padding: 1.2rem 2rem;
+  }
+  .btn,
+  .btn:link,
+  .btn:visited {
+    font-size: 1.8rem;
+    /*padding: 1.4rem 1.3rem;*/
   }
 }
